// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderStartStartRadius renders 0 1`] = `
Array [
  .c0 {
  border-start-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders function 1`] = `
Array [
  .c0 {
  border-start-start-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-start-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders negative number 1`] = `
Array [
  .c0 {
  border-start-start-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-start-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-start-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-start-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-start-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-start-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-start-start-radius: July;
  }
}

@media April {
  .c0 {
    border-start-start-radius: August;
  }
}

@media January {
  .c0 {
    border-start-start-radius: September;
  }
}

@media April {
  .c0 {
    border-start-start-radius: November;
  }
}

@media June {
  .c0 {
    border-start-start-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-start-start-radius: July;
  }
}

@media April {
  .c0 {
    border-start-start-radius: August;
  }
}

@media January {
  .c0 {
    border-start-start-radius: September;
  }
}

@media April {
  .c0 {
    border-start-start-radius: November;
  }
}

@media June {
  .c0 {
    border-start-start-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-start-start-radius: January;
  }
}

@media April {
  .c0 {
    border-start-start-radius: December;
  }
}

@media January {
  .c0 {
    border-start-start-radius: April;
  }
}

@media April {
  .c0 {
    border-start-start-radius: May;
  }
}

@media June {
  .c0 {
    border-start-start-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-start-start-radius: January;
  }
}

@media April {
  .c0 {
    border-start-start-radius: December;
  }
}

@media January {
  .c0 {
    border-start-start-radius: April;
  }
}

@media April {
  .c0 {
    border-start-start-radius: May;
  }
}

@media June {
  .c0 {
    border-start-start-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-start-start-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders string 1`] = `
Array [
  .c0 {
  border-start-start-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartStartRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-start-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
